# flask-lab

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  config.toml.example  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
src/flask_lab/: __init__.py  app.py  config.py  db.py  models.py  todo_view.py
tests/: __init__.py  test_config.py  test_db.py
