[project]
name = "flask-lab"
version = "0.1.0"
description = "A Flask application for experimentation"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "flask-sqlalchemy>=3.1.0",
    "gunicorn>=23.0.0",
    "boto3>=1.28.0",
    "psycopg2-binary>=2.9.0",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"


[project.scripts]
flask-lab = "flask_lab.app:main"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "ty",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--verbose"
